# unifi-viewport-sdk

./: .gitignore  .release-please-manifest.json  AGENTS.md  Cargo.toml  Cross.toml  README.md  release-please-config.json
.github/: CODEOWNERS
.github/workflows/: build.yaml  release.yaml
cross/: Dockerfile.x86_64-unknown-linux-gnu
docs/: DEVIATIONS.md  TODO.md
scripts/: check_use_groups.sh
spec/: README.md  adoption.md  discovery.md  flow.md  layout.md  ucp4.md  viewport-layout.md  viewport-management.md  viewport-summary.md
unifi-cli/: AGENTS.md  Cargo.toml
unifi-cli/src/: cli.rs  device.rs  discovery.rs  main.rs
unifi-controller/: AGENTS.md  Cargo.toml
unifi-controller/src/: error.rs  lib.rs
unifi-controller/tests/: adoption.rs
unifi-device-viewport/: AGENTS.md  Cargo.toml
unifi-device-viewport/src/: cert.rs  device.rs  error.rs  lib.rs  server.rs  state.rs  storage.rs
unifi-device-viewport/src/routes/: adoption.rs  info.rs  mod.rs  settings.rs
unifi-device-viewport/tests/: device_flow.rs
unifi-discovery/: AGENTS.md  Cargo.toml
unifi-discovery/src/: client.rs  error.rs  lib.rs  message.rs  responder.rs  types.rs
unifi-discovery/src/parsing/: error.rs  frame.rs  mod.rs  tlv_values.rs  types.rs
unifi-discovery/tests/: roundtrip.rs
