[workspace]
resolver = "2"
members = ["unifi-cli", "unifi-discovery", "unifi-device-viewport", "unifi-controller"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"
authors = ["Mark Lopez <mark@silvenga.com>"]
description = "Rust SDK for the Ubiquiti Protect Viewport appliance device adoption protocol"
repository = "https://github.com/Silvenga/unifi-viewport-sdk"
homepage = "https://github.com/Silvenga/unifi-viewport-sdk"
documentation = "https://github.com/Silvenga/unifi-viewport-sdk"
keywords = ["unifi", "ubiquiti", "protect", "viewport", "sdk"]
categories = ["api-bindings", "network-programming"]
rust-version = "1.84"

[workspace.lints.rust]
missing_docs = "warn"

[workspace.lints.clippy]
allow_attributes = "warn"
allow_attributes_without_reason = "warn"
create_dir = "warn"
else_if_without_else = "warn"
filetype_is_file = "warn"
infinite_loop = "warn"
undocumented_unsafe_blocks = "warn"
unnecessary_safety_comment = "warn"
unnecessary_safety_doc = "warn"

# Pedantic
empty_enum_variants_with_brackets = "warn"
empty_structs_with_brackets = "warn"
get_unwrap = "warn"
iter_over_hash_type = "warn"
print_stderr = "warn"
print_stdout = "warn"
redundant_test_prefix = "warn"
redundant_type_annotations = "warn"
str_to_string = "warn"
todo = "warn"
unneeded_field_pattern = "warn"
wildcard_dependencies = "warn"
redundant_feature_names = "warn"
negative_feature_names = "warn"
cargo_common_metadata = "warn"
absolute_paths = "warn"

[workspace.dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
anyhow = "1.0.103"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "net", "time", "sync", "io-util"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }
clap = { version = "4.6.1", features = ["derive", "env"] }
bytes = "1.12.0"
socket2 = "0.6.4"
indexmap = "2.14.0"
local-ip-address = "0.6.13"
sysinfo = { version = "0.39", default-features = false, features = ["network", "system"] }
rcgen = "0.13"
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
rustls-pki-types = { version = "1", features = ["alloc"] }
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["server", "http1", "tokio"] }
http-body-util = "0.1"
http = "1"
time = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
